ej5/apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache-container
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
            - name: config-vol
              mountPath: /usr/local/apache2/htdocs
      volumes:
      - name: config-vol
        configMap:
          name: apache-cfgmap
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9090
    targetPort: 80
    protocol: TCP
  selector:
    app: apache
