ej5/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.org/rewrites: "serviceName=apache-svc rewrite=/;serviceName=nginx-svc rewrite=/"
spec:
  ingressClassName: nginx
  rules:
  - host: x.k8s.udc.es
    http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-svc
            port:
              number: 9090
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8080
